feat(#3): add connection validation to EuroCoinSqliteRepository, add javadoc documentation in interface and implementation